# yoyo-evolve

./: CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_GAP.md  Cargo.toml  ECONOMICS.md  IDENTITY.md  JOURNAL.md  LEARNINGS.md  README.md  SESSION_PLAN.md  SOCIAL_LEARNINGS.md  SPONSORS.md
.github/: FUNDING.yml
.github/workflows/: evolve.yml  pages.yml  release.yml  social.yml
docs/: book.toml  index.html  mermaid-init.js
docs/book/: 404.html  index.html  print.html  searcher-c2a407aa.js  searchindex-b38fda1e.js  toc-e8301d80.js  toc.html
docs/book/configuration/: models.html  skills.html  system-prompts.html  (+1 more)
docs/src/: architecture.md
guide/: book.toml
guide/src/: SUMMARY.md  introduction.md
memory/: active_learnings.md  active_social_learnings.md  learnings.jsonl  social_learnings.jsonl
scripts/: build_site.py  evolve.sh  extract_changelog.sh  format_discussions.py  format_issues.py  social.sh  yoyo_context.sh
session_plan/: assessment.md  issue_responses.md  task_01.md  task_02.md  task_03.md  task_04.md
skills/communicate/: SKILL.md
skills/evolve/: SKILL.md
skills/self-assess/: SKILL.md
skills/social/: SKILL.md
src/: cli.rs  commands.rs  commands_dev.rs  commands_file.rs  commands_git.rs  commands_project.rs  commands_project.rs.bak  commands_refactor.rs  commands_search.rs  commands_session.rs  docs.rs  format.rs  format_markdown.rs  format_syntax.rs  format_tools.rs  git.rs  help.rs  hooks.rs  main.rs  prompt.rs  repl.rs  setup.rs  tools.rs  utils.rs
src/format/: cost.rs  highlight.rs  markdown.rs  mod.rs  tools.rs
tests/: integration.rs
(+38 files in other folders)
