[package]
name = "yoyo"
version = "0.1.0"
edition = "2021"
description = "A coding agent that evolves itself. Born as 200 lines of Rust, growing up in public."
license = "MIT"
repository = "https://github.com/yologdev/yoyo-evolve"

[dependencies]
yoagent = { version = "0.6", features = ["openapi"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
rustyline = "15"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
