[package]
name = "yoyo-agent"
version = "0.1.1"
edition = "2021"
description = "A coding agent that evolves itself. Born as 200 lines of Rust, growing up in public."
license = "MIT"
repository = "https://github.com/yologdev/yoyo-evolve"
homepage = "https://yologdev.github.io/yoyo-evolve"
documentation = "https://yologdev.github.io/yoyo-evolve/book/"
readme = "README.md"
keywords = ["agent", "cli", "coding-agent", "ai", "llm"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "yoyo"
path = "src/main.rs"

[dependencies]
yoagent = { version = "0.7", features = ["openapi"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
rustyline = "15"
async-trait = "0.1"
glob = "0.3"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
